# afl-dns

./: #TODO.md#  .gitignore  README.md  TODO.md  afl-dns.opam  afldns.opam  dns_test.install  dns_test.opam  opam  packet_gen.opam  rfc_compliance.md  tmp.txt
ocaml-dns_test/: #afltest.opam#  .merlin  afl_crowbar.sh  afl_persistent.sh  afltest.install  afltest.opam  bug_examples.txt  dns_test.install  launch_afl.sh  launch_afl.sh~  pp_all.sh  pp_crashes.sh  set.sh  test.txt
ocaml-dns_test/_build/: .db  .digest-db  .to-delete-in-source-tree  log
ocaml-dns_test/_build/.aliases/default/: install-00000000000000000000000000000000
ocaml-dns_test/_build/default/: afltest.version.sexp
ocaml-dns_test/_build/default/src/: .merlin  afltest.ml  afltest.ml.d  afltest.mli.d  crowbar_test.ml  crowbar_test.ml.d  persistent_test.ml  persistent_test.ml.d
ocaml-dns_test/forAFL/crowbar_output/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
ocaml-dns_test/forAFL/crowbar_output/query_output/: fuzz_bitmap  fuzzer_stats  plot_data
ocaml-dns_test/forAFL/crowbar_output/queue/: id:000000,orig:query_orig  id:000001,src:000000,op:flip1,pos:0  id:000001,src:000000,op:flip1,pos:8,+cov  id:000002,src:000000,op:flip1,pos:10,+cov  id:000002,src:000000,op:flip1,pos:2  id:000003,src:000000,op:flip1,pos:11,+cov  id:000003,src:000000,op:flip1,pos:2  id:000004,src:000000,op:flip1,pos:12,+cov  id:000004,src:000000,op:flip1,pos:2  id:000005,src:000000,op:flip1,pos:13,+cov  id:000005,src:000000,op:flip1,pos:3  (+225 more)
ocaml-dns_test/forAFL/query_input/: query_orig
ocaml-dns_test/forAFL/query_output/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
ocaml-dns_test/forAFL/response_output/: fuzzer_stats  plot_data
ocaml-dns_test/log/crashes/: crashes_query.txt  crashes_response.txt  crowbar_crashes_query.txt  crowbar_crashes_response.txt  persistent_crashes_query.txt  persistent_crashes_response.txt
ocaml-dns_test/log/valid/: crowbar_valid_query.txt  crowbar_valid_response.txt  persistent_valid_query.txt  persistent_valid_response.txt  valid_query.txt  valid_response.txt
ocaml-dns_test/src/: #jbuild#  #packet_gen.ml#  .#packet_gen.ml  .merlin  afltest.mli~  afltest.ml~  crowbar_test.ml  jbuild  jbuild~  packet_gen.ml  persistent_test.ml  testcases.ml
src/: crowbar_test.ml  dune  jbuild  ocamldns_persistent_test.ml  packet_gen.ml  testcases.ml  udns_persistent_test.ml
(+2229 files in other folders)
