
opam-version: "1.2" name: "dns_test" version: "~unknown" maintainer:
"Willy TAN <tan.willy02@gmail.com>" authors: "Willy TAN
<tan.willy02@gmail.com>" homepage: "" bug-reports: "" license: ""
dev-repo: "" build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "dns_test"]
depends: [
  "ocamlfind" {build}
  "cstruct"
  "crowbar"
  "afl-persistent"
  "dns"
  "udns"
  "ppx_deriving_crowbar"
  "alcotest"
  "astring"
  "ipaddr"
  "lwt"
]
