
opam-version: "1.2"
name: "packet_gen"
version: "~dev"
maintainer: "Willy TAN <tan.willy02@gmail.com>"
authors: "Willy TAN
<tan.willy02@gmail.com>"
homepage: "https://github.com/Willy-Tan/afl-dns"
bug-reports: "https://github.com/Willy-Tan/afl-dns/issues"
dev-repo: "https://github.com/Willy-Tan/afl-dns.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
  
depends: [
  "ocamlfind" {build}
  "cstruct"
  "crowbar"
  "afl-persistent"
  "dns"
  "udns"
  "ppx_deriving_crowbar"
  "alcotest"
  "astring"
  "ipaddr"
  "lwt"
]
