
opam-version: "1.2" name: "afltest" version: "~unknown" maintainer:
"Willy TAN <tan.willy02@gmail.com>" authors: "Willy TAN
<tan.willy02@gmail.com>" homepage: "" bug-reports: "" license: ""
dev-repo: "" build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "afltest"]
depends: [
  "ocamlfind" {build}
]
