(executable
	(name					crowbar_test)       
	(public_name 	crowbar_test)
	(modules			crowbar_test packet_gen)
	(libraries 		udns dns-lwt mirage-profile cmdliner ipaddr.unix lwt.unix hex crowbar cstruct dns afl-persistent astring ipaddr)
	(preprocess 	(pps ppx_deriving.std ppx_deriving_crowbar ppx_cstruct)))

(executable
	(name					ocamldns_persistent_test)      
	(public_name 	ocamldns_persistent_test)
	(modules 			ocamldns_persistent_test)
	(libraries 		cstruct dns afl-persistent))

(executable
	(name					udns_persistent_test)      
	(public_name 	udns_persistent_test)
	(modules 			udns_persistent_test)
	(libraries 		cstruct udns afl-persistent))

(executable
	(name					testcases)
	(public_name 	testcases)
	(modules 			testcases)
	(libraries 		alcotest udns crowbar cstruct dns afl-persistent astring ipaddr))
